changed front-end framework to Java Swing